src/main/java/org/example/MyWitcher/pattern/structural/facade/good/WorkFlowFacade.java
package org.example.MyWitcher.pattern.structural.facade.good;

public class WorkFlowFacade {
    Developer developer = new Developer();
    Job job = new Job();
    BugTracker bugTracker = new BugTracker();

    public void solveProblems(){
        job.doJob();
        bugTracker.startSprint();
        developer.doJobBeforeDeadLine(bugTracker);
    }
}
